# Thesis

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/citypy/layers_cleaned/: city_center_buffer.gpkg  road_edges_pct.csv
notebooks/: cbs.ipynb  citypy.ipynb  eda_cbs.ipynb  prototype.ipynb
notebooks/old/: eda_cbs.ipynb
rule_engine_pre/: Groningen_NL_modified.npz  Groningen_NL_modified_zones.npz  postprocessing.py  preprocessing.py  rule.yaml  rule_dataclass.py  run_pipeline.py  test_preprocessing.py
rule_engine_pre/postprocessing/: __init__.py  building_processor.py  main.py  print_stats.py
rule_engine_pre/preprocessing/: __init__.py  main.py  print_stats.py  template_modifier.py
rule_engine_pre/rules/: parser.py  rule_dataclass.py
rule_engine_pre/test/: postprocessing.py  preprocessing.py
rule_engine_pre/validation/: __init__.py
rules/: generation.md  rules.md  rules_config.yaml
src/prep_data/: bag_fetch.py  cbs.py  citypy_clean.py  citypy_run.py  dist_urban_zones.py
