[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["johhyeji <150627474+johhyeji@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
esda = "^2.7.0"
gdal = "^3.10.2"
osmnx = "^2.0.1"
shapely = "^2.0.7"
folium = "^0.19.4"
mapclassify = "^2.8.1"
notebook = "^7.4.5"
ipykernel = "^6.30.1"
contextily = "^1.6.2"
fiona = "^1.10.1"
plotly = "^6.3.0"
pyyaml = "^6.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
